moved container declarations to body to fix background issues on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* @media only screen and (max-width: 1300px) {
+
+} */
+
 :root {
   --green: #007f0e;
 }
@@ -16,18 +20,18 @@ p {
   margin: 10px
 }
 
-.container {
-  display: grid;
-  grid-template-rows: 50px 1fr;
+body {
   background: url('./img/nessie.webp');
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  height: 100%;
-  min-width: 1024px;
   z-index: -1;
-  background-position: right;
   filter: sepia(0.3);
+}
+
+.container {
+  display: grid;
+  grid-template-rows: 50px 1fr;
+  grid-template-columns: 250px 1fr 250px;
 }
 
 .header {
@@ -41,7 +45,7 @@ p {
   height: 180px;
   justify-self: center;
   grid-row: 2;
-  grid-column: 1;
+  grid-column: 2;
   z-index: 1;
   transition: transform 3s;
   transform: translateY(-40px) translateX(-30px);
@@ -91,15 +95,14 @@ p {
 .main {
   display: grid;
   grid-template-rows: 120px 300px 200px 150px;
-  grid-template-columns: 800px 1fr;
   background-image: url('./img/flipped.png');
   background-repeat: no-repeat;
   background-size: contain;
   z-index: 2;
   justify-self: center;
   grid-row: 2;
-  grid-column: 1;
-  width: 100%;
+  grid-column: 2;
+  min-width: 800px;
   max-width: 800px;
   height: 0;
   padding-bottom: 109.5%;
@@ -113,8 +116,9 @@ p {
   }
 
     #phonograph {
-      width: 250px;
-      height: 250px;
+      max-width: 250px;
+      min-width: 100px;
+      height: auto;
       transform: rotateY(180deg);
       transition: transform 0.3s ease;
     }
